@@ -22,6 +22,10 @@ Unreleased
 - Bug fix: Make sure custom_folder_view uses get_layout_provider utility
   method.
 
+- Explicit registration of an IFolderAddables is no longer required.  A
+  suitable default is found if there is no registration.  Added
+  'get_folder_addables' utility method.
+
 3.15 (2009-12-14)
 -----------------
 
